--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "16.8.3",
     "react-native": "0.59.5",
     "react-native-gesture-handler": "^1.2.0",
+    "react-native-image-picker": "^0.28.1",
     "react-native-linear-gradient": "^2.5.4",
     "react-navigation": "^3.9.1",
     "react-redux": "^7.0.3",
