--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "axios": "^0.18.0",
     "native-base": "^2.12.1",
     "react": "16.8.3",
+    "react-if": "^3.4.0",
     "react-native": "0.59.5",
     "react-native-gesture-handler": "^1.2.0",
     "react-native-image-picker": "^0.28.1",
     "react-native-linear-gradient": "^2.5.4",
+    "react-native-shimmer-placeholder": "^1.0.34",
     "react-navigation": "^3.9.1",
     "react-redux": "^7.0.3",
     "redux": "^4.0.1",
