--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -138,6 +138,8 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-geolocation-service')
+    implementation project(':react-native-maps')
     implementation project(':react-native-image-picker')
     implementation project(':react-native-firebase')
     implementation project(':react-native-linear-gradient')
