--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "react": "16.8.3",
     "react-if": "^3.4.0",
     "react-native": "0.59.5",
+    "react-native-geolocation-service": "^2.0.0",
     "react-native-gesture-handler": "^1.2.0",
     "react-native-image-picker": "^0.28.1",
     "react-native-linear-gradient": "^2.5.4",
+    "react-native-maps": "^0.24.2",
     "react-native-shimmer-placeholder": "^1.0.34",
     "react-navigation": "^3.9.1",
     "react-redux": "^7.0.3",
