--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-navigation": "^3.9.1",
     "react-redux": "^7.0.3",
     "redux": "^4.0.1",
-    "redux-logger": "^3.0.6"
+    "redux-logger": "^3.0.6",
+    "socket.io-client": "^2.2.0"
   },
   "devDependencies": {
     "@babel/core": "7.4.4",
