--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
   package="com.chaipioperator">
 
   <uses-permission android:name="android.permission.INTERNET" />
+  <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+  <uses-permission android:name="android.permission.VIBRATE" />
 
   <application
     android:name=".MainApplication"
@@ -17,6 +19,7 @@
     </service>
     <service android:name="io.invertase.firebase.messaging.RNFirebaseBackgroundMessagingService" />
     <activity
+      android:launchMode="singleTop"
       android:name=".MainActivity"
       android:label="@string/app_name"
       android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
