--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
+    "ios8": "react-native run-ios --simulator='iPhone 8 Plus'",
     "test": "jest"
   },
   "dependencies": {
@@ -13,6 +14,7 @@
     "react": "16.8.3",
     "react-if": "^3.4.0",
     "react-native": "0.59.5",
+    "react-native-firebase": "^5.3.1",
     "react-native-geolocation-service": "^2.0.0",
     "react-native-gesture-handler": "^1.2.0",
     "react-native-image-picker": "^0.28.1",
