--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "ios8": "react-native run-ios --simulator='iPhone 8 Plus'",
+    "iphone8": "react-native run-ios --simulator='iPhone 8 Plus'",
     "test": "jest"
   },
   "dependencies": {
