Updated shop registration form

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-linear-gradient": "^2.5.4",
     "react-native-maps": "^0.24.2",
     "react-native-shimmer-placeholder": "^1.0.34",
+    "react-native-step-indicator": "0.0.11",
     "react-navigation": "^3.9.1",
     "react-redux": "^7.0.3",
     "redux": "^4.0.1",
