--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native-firebase": "^5.3.1",
     "react-native-geolocation-service": "^2.0.0",
     "react-native-gesture-handler": "^1.2.0",
+    "react-native-google-maps-directions": "^2.1.0",
     "react-native-image-picker": "^0.28.1",
     "react-native-linear-gradient": "^2.5.4",
     "react-native-maps": "^0.24.2",
