--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -152,7 +152,9 @@ dependencies {
     implementation project(':react-native-geolocation-service')
     implementation project(':react-native-maps')
     implementation project(':react-native-image-picker')
-    implementation project(':react-native-firebase')
+    compile(project(':react-native-firebase')) {
+      transitive = false
+    }
     implementation project(':react-native-linear-gradient')
     implementation project(':react-native-gesture-handler')
     implementation "com.google.android.gms:play-services-base:16.1.0"
