--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "iphone8": "react-native run-ios --simulator='iPhone 8 Plus'",
+    "release": "cd android && ./gradlew assembleRelease",
     "test": "jest"
   },
   "dependencies": {
