--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "16.8.3",
     "react-if": "^3.4.0",
     "react-native": "0.59.5",
+    "react-native-cardview": "^2.0.3",
     "react-native-firebase": "^5.3.1",
     "react-native-geolocation-service": "^2.0.0",
     "react-native-gesture-handler": "^1.2.0",
