--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "chart.js": "^2.8.0",
     "moment": "^2.24.0",
     "native-base": "^2.12.1",
     "react": "16.8.3",
+    "react-chartjs-2": "^2.8.0",
     "react-if": "^3.4.0",
     "react-native": "0.59.5",
     "react-native-cardview": "^2.0.3",
+    "react-native-charts": "^3.0.0",
     "react-native-firebase": "^5.3.1",
     "react-native-geolocation-service": "^2.0.0",
     "react-native-gesture-handler": "^1.2.0",
@@ -23,6 +26,7 @@
     "react-native-image-picker": "^0.28.1",
     "react-native-linear-gradient": "^2.5.4",
     "react-native-maps": "^0.24.2",
+    "react-native-pure-chart": "0.0.24",
     "react-native-shimmer-placeholder": "^1.0.34",
     "react-native-step-indicator": "0.0.11",
     "react-navigation": "^3.9.1",
