--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "react-native-charts": "^3.0.0",
     "react-native-firebase": "^5.3.1",
     "react-native-geolocation-service": "^2.0.0",
-    "react-native-gesture-handler": "^1.2.0",
     "react-native-google-maps-directions": "^2.1.0",
     "react-native-image-picker": "^0.28.1",
     "react-native-linear-gradient": "^2.5.4",
@@ -41,6 +40,7 @@
     "babel-jest": "24.7.1",
     "jest": "24.7.1",
     "metro-react-native-babel-preset": "0.53.1",
+    "react-native-gesture-handler": "1.0.16",
     "react-test-renderer": "16.8.3"
   },
   "jest": {
