--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -149,6 +149,7 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-background-timer')
     implementation project(':react-native-geolocation-service')
     implementation project(':react-native-maps')
     implementation project(':react-native-image-picker')
