--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -105,8 +105,8 @@ android {
         applicationId "com.chaipioperator"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 1
-        versionName "1.0"
+        versionCode 3
+        versionName "1.2"
     }
     signingConfigs {
       release {
@@ -149,6 +149,7 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-image-resizer')
     implementation project(':react-native-background-timer')
     implementation project(':react-native-geolocation-service')
     implementation project(':react-native-maps')
