--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-geolocation-service": "^2.0.0",
     "react-native-google-maps-directions": "^2.1.0",
     "react-native-image-picker": "^0.28.1",
+    "react-native-image-resizer": "^1.0.1",
     "react-native-linear-gradient": "^2.5.4",
     "react-native-maps": "^0.24.2",
     "react-native-pure-chart": "0.0.24",
