--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "react-redux": "^7.0.3",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
-    "socket.io-client": "^2.2.0"
+    "socket.io-client": "^2.2.0",
+    "switch-button-react-native": "^1.0.3",
+    "toggle-switch-react-native": "^2.1.0"
   },
   "devDependencies": {
     "@babel/core": "7.4.4",
